RT-19048: Update Home page training & events

--- a/content/home--training-and-events.html
+++ b/content/home--training-and-events.html
@@ -2,19 +2,28 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=114" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/c-plus-plus.png" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=114" target="_blank">C++ for C Programmers</a><br />
-			February 18, 2021</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
 		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=115" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/c-plus-plus.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
 			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=115" target="_blank">MPL Object-Oriented Interface to MPI</a><br />
 			February 25, 2021</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=99" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=99" target="_blank">Intro to Machine Learning Concepts, Tools, and Methods</a><br />
+			March 5, 2021</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=100" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=100" target="_blank">Intro to Deep Learning Concepts, Tools, and Methods</a><br />
+			March 12, 2021</p>
 	</div>
 </div>
