RT-18909: Update stem-programs text
- Change COVID notice text
- Remove extra new lines

--- a/content/education/stem-programs.html
+++ b/content/education/stem-programs.html
@@ -8,6 +8,8 @@
 	
 		margin-left: 0; /* Overwrite `.portlet-msg-info` */
 		margin-right: 0; /* Overwrite `.portlet-msg-info` */
+
+        font-weight: normal; /* Overwrite `.portlet-msg-info` */
 	}
 	/* Make content appear centered vertically */
 	.notice--covid-19 p:last-of-type {
@@ -17,7 +19,7 @@
 		<div class="col-sm-9">
 			<div class="portlet-msg-info notice--covid-19">
 				<p>
-					Out of concern for the health and safety of our community, The University of Texas at Austin has cancelled all in-person Summer 2020 programs, including Code@TACC.</p>
+					Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</p>
 			</div>
 			<h3>
 				Program Spotlight</h3>
@@ -215,15 +217,4 @@
 					<a href="mailto:jpowell@tacc.utexas.edu">jpowell@tacc.utexas.edu</a></p>
 			</div>
 		</div>
-		<p>
-			&nbsp;</p>
-		<p>
-			&nbsp;</p>
-		<p>
-			&nbsp;</p>
-		<p>
-			&nbsp;</p>
-		<p>
-			&nbsp;</p>
 	</div>
-	
