RT-18909: Minor: Tweak connected text
- Tweaks for consistency with similar pages
- Remove a few unncessary tags and inline styles
- Restore, but comment, unused FAQ questions
- Fix wrong date in FAQ

--- a/content/education/stem-programs/code-at-tacc/connected.html
+++ b/content/education/stem-programs/code-at-tacc/connected.html
@@ -286,8 +286,8 @@ th{
 				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/1822769/connected-3.jpeg/" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
-			<h2 style="text-align:center; margin:0px 0px 25px 0px; padding:0px;">
-				Prospective Activities</h2>
+			<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align:center;">
+				PROSPECTIVE ACTIVITIES</h4>
 			<div class="col-md-12">
 				<ul>
 					<li>
@@ -310,34 +310,30 @@ th{
 	<!-- Camp Info: FAQs, What not to Bring -->
 	<div class="row">
 		<div class="col-md-12">
-			<div style="margin:0px 0px 50px 0px; padding:0px;">
-				<h2 style="text-align: center;">
-					Program Information</h2>
-			</div>
+			<h2 class="camp-subhead" style="margin:75px 0px 50px 0px; text-align:center;">
+				Program Information</h2>
 			<!-- <img alt="Supercompute Deep Earth: 2015 Gordon Bell Prize Winner" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/deep-earth.png" style="margin:0px; padding:0px; width:100%;" alt="Camp FAQs"/> -->
 			<div class="row">
 				<div class="col-md-4 col-sm-12">
 					<!-- <img alt="Advanced Ligo Discover: 2016" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/ligo.png" style="margin:0px; padding:0px; width:100%;" alt="What to Bring" /> -->
-					<p style="font-size:5em; text-align: center;">
-						&nbsp;</p>
-					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; padding:0px; text-align:center;">
+					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align:center;">
 						WHAT TO KNOW</h4>
 					<ul style="text-align: center; list-style: none;">
 						<li>
 							Willingness to learn</li>
 						<li>
-							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a>)</li>
+							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
 							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to “Get” a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
-					<p style="font-size: 5em; text-align: center;">
-						&nbsp;</p>
-					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; padding:0px; text-align: center;">
+					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align:center;">
 						PROGRAM FORMS</h4>
-					<p>
-						<em>Required forms will be available soon.</em></p>
+					<ul style="text-align: center; list-style: none;">
+						<li>
+							Required forms will be available soon.</small></li>
+					</ul>
 					<!--<p>
 						<em>Compliance forms:</em></p>
 					<p>
@@ -360,9 +356,7 @@ th{
 					</ul>-->
 				</div>
 				<div class="col-md-4 col-sm-12">
-					<p style="font-size: 5em; text-align: center;">
-						&nbsp;</p>
-					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; padding:0px; text-align:center;">
+					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align:center;">
 						CAMP PROGRAM</h4>
 					<ul style="text-align: center; list-style: none;">
 						<li>
@@ -370,19 +364,18 @@ th{
 					</ul>
 				</div>
 			</div>
-			<p style="font-size: 5em; text-align: center;">
-				&nbsp;</p>
-			<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; padding:0px; text-align:center;">
-				Frequently Asked Questions</h4>
+			<h2 class="camp-subhead" style="margin:75px 0px 50px 0px; text-align:center;">
+				Frequently Asked Questions</h2>
 			<div aria-multiselectable="table" class="panel-group" id="dates" role="tablist">
+				<!-- BASICS -->
 				<div class="panel panel-default">
-					<div class="panel-heading" id="headingOne" role="tab">
+					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#dates" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the dates of camp? </a></h4>
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> July 6 – July 16, 2021</div>
+							<b>A:</b> July 26 – August 6, 2021</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
@@ -398,7 +391,7 @@ th{
 				<div class="panel panel-default">
 					<div class="panel-heading" id="ages" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#ages" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the CODE @ TACC Connected participants? </a></h4>
+							<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#ages" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the Code@TACC participants? </a></h4>
 					</div>
 					<div aria-labelledby="ages" class="panel-collapse collapse" id="ages-answer" role="tabpanel">
 						<div class="panel-body">
@@ -428,7 +421,7 @@ th{
 				<div class="panel panel-default">
 					<div class="panel-heading" id="contact" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="contact-answer" aria-expanded="true" class="collapsed" data-parent="#contact" data-toggle="collapse" href="#contact-answer" role="button"> <b>Q</b>: How can I contact the UT Austin Code@TACC Connected Team? </a></h4>
+							<a aria-controls="contact-answer" aria-expanded="true" class="collapsed" data-parent="#contact" data-toggle="collapse" href="#contact-answer" role="button"> <b>Q</b>: How can I contact the UT Austin Code@TACC Team? </a></h4>
 					</div>
 					<div aria-labelledby="contact" class="panel-collapse collapse" id="contact-answer" role="tabpanel">
 						<div class="panel-body">
@@ -445,6 +438,151 @@ th{
 							<b>A:</b> Students will be supervised on the calls by college counselors.  Counselors have been background checked (also checked through the national sex offender registry) and have received child protection training.</div>
 					</div>
 				</div>
+				<!--<div class="panel panel-default">
+					<div class="panel-heading" id="laptop" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="laptop-answer" aria-expanded="true" class="collapsed" data-parent="#laptop" data-toggle="collapse" href="#laptop-answer" role="button"> <b>Q</b>: Should students bring their own computer or laptop? </a></h4>
+					</div>
+					<div aria-labelledby="laptop" class="panel-collapse collapse" id="laptop-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Students will not need to bring laptops from home for this program.</div>
+					</div>
+				</div>-->
+				<!-- HOUSING -->
+				<!--<div class="panel panel-default">
+					<div class="panel-heading" id="housing" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="housing-answer" aria-expanded="true" class="collapsed" data-parent="#housing" data-toggle="collapse" href="#housing-answer" role="button"> <b>Q</b>: Where will the students be staying during the course of the program? </a></h4>
+					</div>
+					<div aria-labelledby="housing" class="panel-collapse collapse" id="housing-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Students will be housed in a campus residential hall (campus dorm). Participants are responsible for their travel to and from the UT campus at the start and conclusion of program.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="reshall" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="reshall-items" aria-expanded="true" class="collapsed" data-parent="#reshall" data-toggle="collapse" href="#reshall-items" role="button"> <b>Q:</b> What should students bring to the residential hall?</a></h4>
+					</div>
+					<div aria-labelledby="reshall" class="panel-collapse collapse" id="reshall-items" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Students will be provided with bed linen and pillows. Participants are responsible for bringing their own toiletries (deodorant, hair products, sunscreen, etc).</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="gender" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="laptop-answer" aria-expanded="true" class="collapsed" data-parent="#gender" data-toggle="collapse" href="#dorm-assign" role="button"> <b>Q:</b>Will residential hall floors have mixed genders (females and males)?</a></h4>
+					</div>
+					<div aria-labelledby="gender" class="panel-collapse collapse" id="dorm-assign" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Student housing is separated by gender. There will be an all-male dorm and an all-female dorm.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="roommates" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="laptop-answer" aria-expanded="true" class="collapsed" data-parent="#roommates" data-toggle="collapse" href="#room-req" role="button"> <b>Q:</b> Can I pick their roommate?</a></h4>
+					</div>
+					<div aria-labelledby="roommates" class="panel-collapse collapse" id="room-req" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> The program is designed to prepare students for college life, including getting to know a new roommate.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="safety-precautions" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="laptop-answer" aria-expanded="true" class="collapsed" data-parent="#safety-precautions" data-toggle="collapse" href="#safety" role="button"> <b>Q:</b> What safety precautions are taken in the residence halls?</a></h4>
+					</div>
+					<div aria-labelledby="safety-precautions" class="panel-collapse collapse" id="safety" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Whitis Court Residential Hall requires key-card access to enter each building. Exits are alarmed and connected to University Police Department. Also, at least two counselors are assigned to sleep in each residential building.</div>
+					</div>
+				</div>-->
+				<!-- MEDICAL -->
+				<!--<div class="panel panel-default">
+					<div class="panel-heading" id="allergies" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="allergies-answer" aria-expanded="true" class="collapsed" data-parent="#allergies" data-toggle="collapse" href="#allergies-answer" role="button"> <b>Q</b>: What if I have food allergies or special dietary needs? </a></h4>
+					</div>
+					<div aria-labelledby="allergies" class="panel-collapse collapse" id="allergies-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Please let us know of any dietary restrictions. Food options will be offered to fit students' dietary needs.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="medical" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="medical-answer" aria-expanded="true" class="collapsed" data-parent="#medical" data-toggle="collapse" href="#medical-answer" role="button"> <b>Q</b>: What if I need to see a doctor? </a></h4>
+					</div>
+					<div aria-labelledby="medical" class="panel-collapse collapse" id="medical-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> For emergency treatment, students will be transported to St. David's North Austin Medical Center (12221 N. Mopac) when on JJ Pickle campus or UT Austin University Health Services -our on-campus health service for minor treatment (512-471-4955), Monday through Friday 8a – 5pm. For emergency or after hours treatment, students will be transported to St. David's Hospital on east 32nd street in Austin.</div>
+					</div>
+				</div>-->
+				<!-- CLOTHING -->
+				<!--<div class="panel panel-default">
+					<div class="panel-heading" id="clothes" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="washing-clothes" aria-expanded="true" class="collapsed" data-parent="#clothes" data-toggle="collapse" href="#washing-clothes" role="button"> <b>Q</b>: Will students be able to wash clothes? </a></h4>
+					</div>
+					<div aria-labelledby="clothes" class="panel-collapse collapse" id="washing-clothes" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants will be able to wash and dry clothes in their residential halls. There is no cost to wash or dry clothes in their residential halls. Laundry detergent and softener will be provided by camp.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="packed-clothes" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="packing" aria-expanded="true" class="collapsed" data-parent="#packed-clothes" data-toggle="collapse" href="#packing" role="button"> <b>Q</b>: How many days of clothes should I bring? </a></h4>
+					</div>
+					<div aria-labelledby="packed-clothes" class="panel-collapse collapse" id="packing" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants will be able to wash clothes in their residential halls. Therefore, participants should bring one weeks worth of clothes. Participants are also encouraged to bring comfortable shoes and "nice" dressy clothes for mock interviews.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="attire" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="attire-answer" aria-expanded="true" class="collapsed" data-parent="#attire" data-toggle="collapse" href="#attire-answer" role="button"> <b>Q</b>: What is the dress expectation? </a></h4>
+					</div>
+					<div aria-labelledby="attire" class="panel-collapse collapse" id="attire-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> During the week, students should bring comfortable and appropriate clothing for 90F during the day and 70F during the night weather. Also, participants should bring socks for bowling and walking shoes. Note, all casual-wear clothing must conform to school dress code standards.</div>
+					</div>
+				</div>-->
+				<!-- PARTICIPATION -->
+				<!--<div class="panel panel-default">
+					<div class="panel-heading" id="dismissal" role="tab" style="border-bottom: 0px none;">
+						<h4 class="panel-title">
+							<a aria-controls="dismissal-answer" aria-expanded="true" class="collapsed" data-parent="#dismissal" data-toggle="collapse" href="#dismissal-answer" role="button"> <b>Q</b>: May students leave campus? </a></h4>
+					</div>
+					<div aria-labelledby="dismissal" class="panel-collapse collapse" id="dismissal-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants will not be allowed to leave campus during the program. Also, adults (including counselors) are never allowed to be alone with participants.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="early-dismissal" role="tab" style="border-bottom: 0px none;">
+						<h4 class="panel-title">
+							<a aria-controls="early-dis-answer" aria-expanded="true" class="collapsed" data-parent="#early-dismissal" data-toggle="collapse" href="#early-dis-answer" role="button"> <b>Q</b>: Can I leave the camp early? </a></h4>
+					</div>
+					<div aria-labelledby="early-dismissal" class="panel-collapse collapse" id="early-dis-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants will be unable to leave campus during the time of the camp.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="camp-visitors" role="tab" style="border-bottom: 0px none;">
+						<h4 class="panel-title">
+							<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#camp-visitors" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can I have visitors during CODE @ TACC Cybersecurity?</a></h4>
+					</div>
+					<div aria-labelledby="camp-visitors" class="panel-collapse collapse" id="visitors" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants will be unable to have visitors. Adults with access to our campers require background checks (also checked through the national sex offender registry) and training on protecting children from abuse. Adults (including counselors) are never allowed to be alone with a camper.</div>
+					</div>
+				</div>-->
+				<!-- 2021 ADDITIONS -->
 				<div class="panel panel-default">
 					<div class="panel-heading" id="wifi" role="tab">
 						<h4 class="panel-title">
@@ -481,7 +619,7 @@ th{
 			<div class="dress-code col-sm-12">
 				<!-- <p style="font-size: 5em; text-align: center;">
 					<i class="fa fa-ban" aria-hidden="true"></i></p> -->
-				<h2 class="camp-subhead" style="padding:0px; text-align:center; margin:75px 0px 50px 0px; padding:0px;">
+				<h2 class="camp-subhead" style="margin:75px 0px 50px 0px; text-align:center;">
 					TACC Dress Policy</h2>
 				<p>
 					Participants have the right to dress as they choose as long as their dress meets the approved dress and grooming regulations, does not disrupt activities, is not obscene or defamatory, and does not endanger the physical health or safety of themselves or others.
@@ -507,7 +645,6 @@ th{
 					<li>
 						Any bedroom attire is prohibited outside of the dorms; pajama tops or bottoms, slippers, etc...</li>
 				</ul>
-				<hr />
 			</div>
 		</div>
 	</div>
