RT-18909: Minor tweaks for consistency

--- a/content/education/stem-programs.html
+++ b/content/education/stem-programs.html
@@ -29,7 +29,7 @@
 			<video controls="" height="432" poster="https://www.tacc.utexas.edu/documents/1084364/1158641/robotics-video.png" width="768">
 				<source codecs="avc1.42E01E, mp4a.40.2" src="https://www.tacc.utexas.edu/documents/1084364/1158641/CodeatTACC.mp4" type="video/mp4"> </source></video>
 			<p>
-				Code @ TACC Robotics provides an introduction to programming, robotics and electronics</p>
+				Code@TACC Robotics provides an introduction to programming, robotics and electronics</p>
 		</div>
 		<div class="col-md-3">
 			<h3>
@@ -60,7 +60,7 @@
 			<div class="col-md-6">
 				<!--<img alt="Wearables Camp" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/studentproject-lg.png" style="" />
 				<h5 style="margin-bottom:0px;">
-					<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/wearables-2018" target="_blank"> CODE@TACC Wearables Camp</a></h5>
+					<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/wearables-2018" target="_blank"> Code@TACC Wearables Camp</a></h5>
 				<p style="margin-top:2px;">
 					Cloud computing, progressive web application development, electronics and the Internet of Things.</p>--><img alt="Back@TACC" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/back-at-tacc.jpg/" />
 				<h5 style="margin-bottom:0px;">
@@ -80,7 +80,7 @@
 					<div class="col-md-6">
 						<img alt="Students building a tower" class="systems-image img-responsive" src="/documents/1084364/1151567/code-connected.jpg/" />
 						<h5 style="margin-bottom:0px;">
-							<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/connected" target="_blank">CODE@TACC Connected Camp</a></h5>
+							<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/connected" target="_blank">Code@TACC Connected Camp</a></h5>
 						<p style="margin-top:2px;">
 							Using technology to solve problems important to them and their community</p>
 					</div>
@@ -89,7 +89,7 @@
 					<div class="col-md-6">
 						<img alt="Cybersecurity Camp" class="systems-image img-responsive sm-images" src="/documents/1084364/1151567/code-cybersecurity.jpg/" style="" />
 						<h5 style="margin-bottom:0px;">
-							<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/cybersecurity" target="_blank"> CODE@TACC Cybersecurity Camp</a></h5>
+							<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/cybersecurity" target="_blank"> Code@TACC Cybersecurity Camp</a></h5>
 						<p style="margin-top:2px;">
 							Cybersecurity careers and online safety</p>
 					</div>
