--- a/content/education/stem-programs/code-at-tacc/connected.html
+++ b/content/education/stem-programs/code-at-tacc/connected.html
@@ -79,7 +79,7 @@ th{
 	color:#039;
 	font-size: 2.75em;
 	margin-top: 0px;
-	/*padding-left: 30%;*/
+	margin-bottom: 0px;
 	text-align: center;
 }
 
@@ -205,7 +205,8 @@ th{
 		<div class="col-sm-12" style="font-size: 1em;">
 			<p>
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
-			<!-- <a style="float: left; width: 30%;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1158641/2017-CODE-Logo.png" style="margin:0px; padding:0px; width: 300px;" /></a> --></div>
+			<!-- <a style="float: left; width: 30%;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1158641/2017-CODE-Logo.png" style="margin:0px; padding:0px; width: 300px;" /></a> -->
+		</div>
 		<div class="col-sm-12">
 			<!-- <p>
 				<img alt="Connected Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p> -->
@@ -248,7 +249,7 @@ th{
 		</div>
 	</div>
 	<!-- Short Info about camp -->
-	<div class="row" style="margin-bottom: 50px;">
+	<div class="row" style="margin: 30px 0px 50px 0px; padding: 30px; border: solid 1px #000000;">
 		<div class="col-md-4">
 			<h2 style="text-align:center;">
 				<span style="border-bottom: 1px solid; font-weight:bolder;">Dates</span><br />
@@ -348,10 +349,10 @@ th{
 						<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected+-+SPANISH/e66cef38-c332-4634-a504-cdaad60cb40f" target="_blank">Español</a></p>
 					<ul style="list-style: none;">
 						<li style="margin-bottom: 20px;">
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309" target="_blank">2018 English CODE @ TACC Connected - YPP Camp Release Forms</a>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309" target="_blank">2018 English Code@TACC Connected - YPP Camp Release Forms</a>
 						</li>
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc" target="_blank">2018 Español CODE @ TACC Connected - YPP formularios de liberación</a>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc" target="_blank">2018 Español Code@TACC Connected - YPP formularios de liberación</a>
 						</li>
 					</ul>-->
 				</div>
@@ -575,7 +576,7 @@ th{
 				<div class="panel panel-default">
 					<div class="panel-heading" id="camp-visitors" role="tab" style="border-bottom: 0px none;">
 						<h4 class="panel-title">
-							<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#camp-visitors" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can I have visitors during CODE @ TACC Cybersecurity?</a></h4>
+							<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#camp-visitors" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can I have visitors during Code@TACC Cybersecurity?</a></h4>
 					</div>
 					<div aria-labelledby="camp-visitors" class="panel-collapse collapse" id="visitors" role="tabpanel">
 						<div class="panel-body">
