--- a/content/education/stem-programs/code-at-tacc/robotics.html
+++ b/content/education/stem-programs/code-at-tacc/robotics.html
@@ -214,7 +214,7 @@ th{
 		<div class="col-sm-12" style="font-size: 1em;">
 			<p>
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
-			<!-- <img alt="CODE @ TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />-->
+			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />-->
 		</div>
 		<div class="col-sm-12">
 			<header>
@@ -222,7 +222,7 @@ th{
 					Robotics</div>
 			</header>
 		</div>
-		<!-- <h1 style="text-align: center;">CODE @ TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/CODE @ TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> -->
+		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> -->
         <!-- <div class="col-sm-12">
             <p>
                 <img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
@@ -257,33 +257,31 @@ th{
 		</div>
 	</div>
 	<!-- Short Info about camp -->
-	<div style="margin: 10px 0px 40px 0px; padding: 30px; border: solid 1px #000000;">
-		<div class="row">
-			<div class="col-md-4">
-				<h2 style="text-align:center;">
-					<span style="border-bottom: 1px solid; font-weight:bolder;">Dates</span><br />
-					<br />
-					June 7 – June 18, 2021</h2>
-			</div>
-			<div class="col-md-4 center-col">
-				<h2 style="text-align:center;">
-					<span style="border-bottom: 1px solid; font-weight:bolder;">Application</span><br />
-					<br />
-					<!--2020-04-21: Camps closed -->
-					<!--<a href="https://utexas.qualtrics.com/jfe/form/SV_0pNf0igeJJ2LCAZ" target="_blank">Apply Here</a>--></h2>
-				<p style="text-align: center; margin-top: -20px;">
-					<small>Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</small></p>
+	<div class="row" style="margin: 10px 0px 40px 0px; padding: 30px; border: solid 1px #000000;">
+		<div class="col-md-4">
+			<h2 style="text-align:center;">
+				<span style="border-bottom: 1px solid; font-weight:bolder;">Dates</span><br />
+				<br />
+				June 7 – June 18, 2021</h2>
+		</div>
+		<div class="col-md-4 center-col">
+			<h2 style="text-align:center;">
+				<span style="border-bottom: 1px solid; font-weight:bolder;">Application</span><br />
+				<br />
 				<!--2020-04-21: Camps closed -->
-				<!--<p style="text-align: center;">
-					<small>Application closes April 24, 2020<br />
-					We will update be notified of acceptance on May 8, 2020</small></p>-->
-			</div>
-			<div class="col-md-4">
-				<h2 style="text-align:center;">
-					<span style="border-bottom: 1px solid; font-weight: bolder;">Cost</span><br />
-					<br />
-					FREE</h2>
-			</div>
+				<!--<a href="https://utexas.qualtrics.com/jfe/form/SV_0pNf0igeJJ2LCAZ" target="_blank">Apply Here</a>--></h2>
+			<p style="text-align: center; margin-top: -20px;">
+				<small>Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</small></p>
+			<!--2020-04-21: Camps closed -->
+			<!--<p style="text-align: center;">
+				<small>Application closes April 24, 2020<br />
+				We will update be notified of acceptance on May 8, 2020</small></p>-->
+		</div>
+		<div class="col-md-4">
+			<h2 style="text-align:center;">
+				<span style="border-bottom: 1px solid; font-weight: bolder;">Cost</span><br />
+				<br />
+				FREE</h2>
 		</div>
 	</div>
 	<!-- Prospective Activities -->
@@ -396,9 +394,9 @@ th{
 						<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Robotics+-+SPANISH/f2f4fb6d-e59f-4ba8-be6d-40ca99459d8a" target="_blank">Español</a></div>
 					<ul style="text-align: center; list-style: none;">
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3" target="_blank">2018 English CODE @ TACC - YPP Camp Release Form</a></li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3" target="_blank">2018 English Code@TACC - YPP Camp Release Form</a></li>
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709" target="_blank">2018 Español CODE @ TACC - YPP formularios de liberación</a></li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709" target="_blank">2018 Español Code@TACC - YPP formularios de liberación</a></li>
 					</ul>-->
 				</div>
 				<div class="col-md-4 col-sm-12">
@@ -621,7 +619,7 @@ th{
 			<div class="panel panel-default">
 				<div class="panel-heading" id="camp-visitors" role="tab" style="border-bottom: 0px none;">
 					<h4 class="panel-title">
-						<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#camp-visitors" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can I have visitors during CODE @ TACC Cybersecurity?</a></h4>
+						<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#camp-visitors" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can I have visitors during Code@TACC Cybersecurity?</a></h4>
 				</div>
 				<div aria-labelledby="camp-visitors" class="panel-collapse collapse" id="visitors" role="tabpanel">
 					<div class="panel-body">
