--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -79,7 +79,7 @@
 		color:#039;
 		font-size: 2.75em;
 		margin-top: 0px;
-		/*padding-left: 30%;*/
+		margin-bottom: 0px;
 		text-align: center;
 	}
 	
@@ -214,20 +214,21 @@
 		<div class="col-sm-12" style="font-size: 1em;">
 			<p>
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
-			<!-- <img alt="CODE @ TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />--></div>
-			<div class="col-sm-12">
-				<header>
-					<div class="cybersecurity-logo">
-						GenCyber@TACC</div>
-				</header>
-			</div>
-			<!-- <h1 style="text-align: center;">CODE @ TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/CODE @ TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> -->
+			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />-->
+		</div>
+		<div class="col-sm-12">
+			<header>
+				<div class="cybersecurity-logo">
+					GenCyber@TACC</div>
+			</header>
+		</div>
+		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> -->
 		<!-- <div class="col-sm-12">
-				<p>
-					<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
-			</div> -->
+			<p>
+				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
+		</div> -->
 		<div class="col-md-12">
-			<h2 class="camp-dates rwd-dates" style="text-align: center; margin: 0px; padding: 0px;">
+			<h2 class="camp-dates rwd-dates">
 				July 6 – July 16, 2021</h2>
 		</div>
 	</div>
@@ -256,27 +257,25 @@
 		</div>
 	</div>
 	<!-- Short Info about camp -->
-	<div style="margin: 30px 0px 50px 0px; padding: 30px; border: solid 1px #000000;">
-		<div class="row">
-			<div class="col-md-4">
-				<h2 style="text-align:center;">
-					<span style="border-bottom: 1px solid; font-weight:bolder;">Dates</span><br />
-					<br />
-					July 6 – July 16, 2021</h2>
-			</div>
-			<div class="col-md-4 center-col">
-				<h2 style="text-align:center;">
-					<span style="border-bottom: 1px solid; font-weight:bolder;">Application</span><br />
-					<br />
-					<a href="https://utexas.qualtrics.com/jfe/form/SV_aVhIgJLYLwSo5Hn" target="_blank">Apply Here</a></h2>
-				<!--2020-04-21: Camps closed --><!--<p style="margin-top: 0px; font-style: italic; font-size: 12px; text-align: center;">
-						Participants will be notified by May 1, if they were selected to participate in the program. Application closes on April 20, 2020.</p>--></div>
-			<div class="col-md-4">
-				<h2 style="text-align:center;">
-					<small><span style="border-bottom: 1px solid; font-weight: bolder;">Cost</span><br />
-					<br />
-					FREE</small></h2>
-			</div>
+	<div class="row" style="margin: 30px 0px 50px 0px; padding: 30px; border: solid 1px #000000;">
+		<div class="col-md-4">
+			<h2 style="text-align:center;">
+				<span style="border-bottom: 1px solid; font-weight:bolder;">Dates</span><br />
+				<br />
+				July 6 – July 16, 2021</h2>
+		</div>
+		<div class="col-md-4 center-col">
+			<h2 style="text-align:center;">
+				<span style="border-bottom: 1px solid; font-weight:bolder;">Application</span><br />
+				<br />
+				<a href="https://utexas.qualtrics.com/jfe/form/SV_aVhIgJLYLwSo5Hn" target="_blank">Apply Here</a></h2>
+			<!--2020-04-21: Camps closed --><!--<p style="margin-top: 0px; font-style: italic; font-size: 12px; text-align: center;">
+					Participants will be notified by May 1, if they were selected to participate in the program. Application closes on April 20, 2020.</p>--></div>
+		<div class="col-md-4">
+			<h2 style="text-align:center;">
+				<span style="border-bottom: 1px solid; font-weight: bolder;">Cost</span><br />
+				<br />
+				FREE</h2>
 		</div>
 	</div>
 	<small><!-- Prospective Activities --></small>
@@ -314,8 +313,31 @@
 				Program Information</h2>
 			<!-- <img alt="Supercompute Deep Earth: 2015 Gordon Bell Prize Winner" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/deep-earth.png" style="margin:0px; padding:0px; width:100%;" alt="Camp FAQs"/> -->
 			<div class="row">
+				<!--<div class="col-md-4 col-sm-12">
+					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align:center;">
+						WHAT TO BRING</h4>
+					<ul style="text-align: center; list-style: none;">
+						<li>
+							Shorts, T-shirts, jeans, pants, sneakers or sandals are acceptable</li>
+						<li>
+							Nice clothes/shoes for a team presentation (Business casual is fine for final day)</li>
+						<li>
+							Accessories (Belt)</li>
+						<li>
+							Umbrella (Rain or shine, we will walk.)</li>
+						<li>
+							Water bottle</li>
+						<li>
+							Backpack</li>
+						<li>
+							Pens/Pencils</li>
+						<li>
+							1 small notebook</li>
+						<li>
+							A list of questions that you want to ask current students and staff about UT Austin, or college life.</li>
+					</ul>
+				</div>-->
 				<div class="col-md-4 col-sm-12">
-					<!-- <img alt="Advanced Ligo Discover: 2016" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/ligo.png" style="margin:0px; padding:0px; width:100%;" alt="What to Bring" /> -->
 					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align:center;">
 						WHAT TO KNOW</h4>
 					<ul style="text-align: center; list-style: none;">
@@ -327,6 +349,22 @@
 							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to “Get” a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 					</ul>
 				</div>
+				<!--<div class="col-md-4 col-sm-12">
+					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align:center;">
+						WHAT <b>NOT</b> TO BRING</h4>
+					<ul style="text-align: center; list-style: none;">
+						<li>
+							Weapons, explosives, candles, flammable materials &nbsp;</li>
+						<li>
+							Expensive sports equipment or musical instruments &nbsp;</li>
+						<li>
+							Illegal substances such as alcohol, tobacco, or drugs &nbsp;</li>
+						<li>
+							Pets/Animals (with the exception of service animals) &nbsp;</li>
+						<li>
+							A Bad Attitude</li>
+					</ul>
+				</div>-->
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; text-align: center;">
 						PROGRAM FORMS</h4>
@@ -340,9 +378,9 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></p>
 						<ul style="list-style: none;">
 							<li style="margin-bottom: 10px;">
-								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English CODE @ TACC Cybersecurity - YPP Camp Release">2018 English CODE @ TACC Cybersecurity - YPP Camp Release </a></li>
+								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English Code@TACC Cybersecurity - YPP Camp Release">2018 English Code@TACC Cybersecurity - YPP Camp Release </a></li>
 							<li>
-								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español CODE @ TACC Cybersecurity - YPP formularios de liberación">2018 Español CODE @ TACC Cybersecurity - YPP formularios de liberación</a></li>
+								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español Code@TACC Cybersecurity - YPP formularios de liberación">2018 Español Code@TACC Cybersecurity - YPP formularios de liberación</a></li>
 						</ul>-->
 				</div>
 				<div class="col-md-4 col-sm-12">
@@ -366,7 +404,7 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> : July 6 – July 16, 2021</div>
+							<b>A:</b> July 6 – July 16, 2021</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
@@ -566,7 +604,7 @@
 			<div class="panel panel-default">
 				<div class="panel-heading" id="camp-visitors" role="tab" style="border-bottom: 0px none;">
 					<h4 class="panel-title">
-						<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#camp-visitors" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can I have visitors during CODE @ TACC Cybersecurity?</a></h4>
+						<a aria-controls="visitors" aria-expanded="true" class="collapsed" data-parent="#camp-visitors" data-toggle="collapse" href="#visitors" role="button"> <b>Q</b>: Can I have visitors during Code@TACC Cybersecurity?</a></h4>
 				</div>
 				<div aria-labelledby="camp-visitors" class="panel-collapse collapse" id="visitors" role="tabpanel">
 					<div class="panel-body">
@@ -721,7 +759,7 @@
 				<p style="padding:0px; text-align: center;">
 						Learn more about TACC's K-12 programs.</p></div>
 			<div class="col-sm-6">
-				<a aria-label="The formal CODE @ TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="CODE @ TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
+				<a aria-label="The formal Code@TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="Code@TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
 					</div>
 		</div>
 		--></div>
