RT-18909: Style rules & indentation consistency

--- a/content/education/stem-programs/code-at-tacc/connected.html
+++ b/content/education/stem-programs/code-at-tacc/connected.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 body {
-	background: #f4f4f4; /* Fallback */
+    background: #f4f4f4; /* Fallback */
     background: linear-gradient(#f4f4f4, #dadada); /* Standard */
 }
 
@@ -9,51 +9,46 @@ abbr[title] {
 }
 
 p {
-	font-family: "Helvetica Neue","Helvetica",sans-serif;
-	line-height:1.5;
-	font-size:15px;
+    font-family: "Helvetica Neue","Helvetica",sans-serif;
+    line-height:1.5;
+    font-size:15px;
 }
 
 th{
-	font-weight:lighter;
-	font-size: 1em;
+    font-weight:lighter;
+    font-size: 1em;
 }
 
 #retro-header-wrapper {
-	width:90%;
-	margin: 0px auto 0px auto;
-	padding:0px 5%;
+    width:90%;
+    margin: 0px auto 0px auto;
+    padding:0px 5%;
 }
 
 #retro-header-div {
-	margin:0px;
-	padding:30px 0px;
+    margin:0px;
+    padding:30px 0px;
 }
 
 #retro-body-wrapper {
-	width:90%;
-	margin: 0px auto 0px auto;
-	padding:50px 5%;
+    width:90%;
+    margin: 0px auto 0px auto;
+    padding:50px 5%;
 }
 
 .headers{
-	padding-left: 30%;
-	position: relative;
+    padding-left: 30%;
+    position: relative;
 }
 
 .codetacc-head{
-	display: block;
-	margin-bottom: -18px;
-}
-
-.code-main-logo{
-	/* margin-left: 30%;
-	width: 800px; */
+    display: block;
+    margin-bottom: -18px;
 }
 
 .code-logo-ds{
-	margin-left: 12%;
-	width: 800px;
+    margin-left: 12%;
+    width: 800px;
 }
 /*
 .Connected{
@@ -71,134 +66,138 @@ th{
 }
 
 .code-at-tacc-logo{
-	width: 400px;
-	margin: 0 auto;
+    width: 400px;
+    margin: 0 auto;
 }
 
 .camp-dates{
-	color:#039;
-	font-size: 2.75em;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	text-align: center;
+    color:#039;
+    font-size: 2.75em;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
 }
 
 .panel{
-	border: 0 none;
+    border: 0 none;
 }
 
 .panel-default > .panel-heading{
-	background-image: none;
-	background-color: transparent;
-	border-bottom: 2px solid transparent;
-	color: #039;
+    background-image: none;
+    background-color: transparent;
+    border-bottom: 2px solid transparent;
+    color: #039;
 }
 
 .panel-title a{
-	color: #039;
+    color: #039;
 }
 
 .center-col{
-	border-left: 1px solid #3e3e3e;
-	border-right: 1px solid #3e3e3e;
+    border-left: 1px solid #3e3e3e;
+    border-right: 1px solid #3e3e3e;
 }
 
 .application{
-	border-bottom: 1px solid;
-	font-weight: bolder;
+    border-bottom: 1px solid;
+    font-weight: bolder;
 }
 
 .camp-subhead{
-	font-family:"HelveticaNeueLTStd-LtCn","Helvetica Neue","Helvetica",sans-serif;
-	color: rgb(0, 0, 0);
+    font-family:"HelveticaNeueLTStd-LtCn","Helvetica Neue","Helvetica",sans-serif;
+    color: rgb(0, 0, 0);
 }
 
 .img-banners{
-	margin:0;
-	padding:0;
-	width:100%;
-	border:none;
-	text-align: center;
+    margin:0;
+    padding:0;
+    width:100%;
+    border:none;
+    text-align: center;
 
 }
 
 @media (max-width: 1200px) {
-	.rwd-codetacc{}
+    .rwd-codetacc{}
 
-	.rwd-Connected{
-		font-size: 3em;
-	}
+    .rwd-designsafe{
+        font-size: 3em;
+    }
 
-	.rwd-dates{}
+    .rwd-dates{}
 
 }
 @media (max-width: 800px){
-	.rwd-codetacc{}
+    .rwd-codetacc{}
 
-	.rwd-Connected{
-		font-size: 2em;
-		padding: 10px;
-	}
+    .rwd-Connected{
+        font-size: 2em;
+        padding: 10px;
+    }
 
-	.rwd-dates{}
+    .connected-logo{
+        font-size: 2.5em;
+    }
 
-	.center-col{
-			border-left: 0 none;
-			border-right: 0 none;
-		}
+    .rwd-dates{}
 
-	.code-logo-ds{
-			margin-left: 0;
+    .center-col{
+            border-left: 0 none;
+            border-right: 0 none;
+        }
+
+    .code-logo-ds{
+            margin-left: 0;
 
 
-		}
-		.code-main-logo{
-				width: 400px;
-				margin-left: 12%;
-		}
+        }
+        .code-main-logo{
+                width: 400px;
+        }
 
-		.img-banners{
-			margin-bottom: 20px;
-		}
+        .img-banners{
+            margin-bottom: 20px;
+        }
 }
 
 @media (max-width: 480px) {
-	.rwd-codetacc{
-		font-size: 20px;
-	}
+    .rwd-codetacc{
+        font-size: 20px;
+    }
 
-	.rwd-Connected{
-		font-size: 1em;
-		padding-top: 10px;
-	}
+    .rwd-Connected{
+        font-size: 1em;
+        padding-top: 10px;
+    }
 
-	.rwd-dates{
-		font-size:2em;
-	}
+    .rwd-dates{
+        font-size:1.5em;
+    }
 
-	.code-logo-ds{
-		margin-left:0;
+    .code-logo-ds{
+        margin-left:0;
 
-	}
-	.code-main-logo{
-			width: 400px;
-			margin-left: 0;
-	}
+    }
+    .code-main-logo{
+            width: 400px;
+    }
+    .connected-logo{
+        font-size: 2em;
+    }
 
-	.center-col{
-		border-left: 0 none;
-		border-right: 0 none;
-	}
+    .center-col{
+        border-left: 0 none;
+        border-right: 0 none;
+    }
 
-	.directions{
-		border-top: 1px solid lightgrey;
-		padding-top: 15px;
-	}
+    .directions{
+        border-top: 1px solid lightgrey;
+        padding-top: 15px;
+    }
 
-	.img-banners{
-		margin-bottom: 20px;
-	}
-
+    .img-banners{
+        margin-bottom: 20px;
+    }
 }</style>
 <div class="container" id="retro-header-wrapper">
 	<div class="row" id="retro-header-div">
